fix: white spaces with overlap

--- a/src/input.css
+++ b/src/input.css
@@ -3,9 +3,10 @@
 @tailwind utilities;
 
 .sw-carousel img {
-  width: 100%;
+  width: 100.8%;
+  max-width: 100.8%;
   height: 100%;
-  object-fit: contain;
+  object-fit: unset;
   pointer-events: none;
 
   /* object-fit: cover; */
